--- a/src/main/webapp/Salut.html
+++ b/src/main/webapp/Salut.html
@@ -58,6 +58,9 @@
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
+      <tr>
+        <td id="paneauProfils"></td>        
+      </tr>        
     </table>
   </body>
 </html>
